# CADAgent

./: CLAUDE.md  House.cadagent.plan.md  README.md  house.20260424-134425.FCBak  house.20260424-134714.FCBak  house.FCStd  house.cadagent.json  house.cadagent.sessions.json  pixi.toml  restart.sh
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake  PrintFinalReport.cmake
example/: 51.6.4.1 Schutzraum.dwg
house.cadagent.sessions.d/: 5312928d-ce46-40d8-83b2-13e43e7d82f2.json  f32613c1-437b-43dd-a77e-5df4788a8a24.json
scripts/: cadagent  cadagent-cli  harness_v2.py  harness_v2.sh  probe_stream.py
scripts/spike/: FINDINGS.md  freecadcmd_spike.sh
src/Gui/: CADAgentView.cpp  CADAgentView.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Workbench.cpp
src/Mod/: CMakeLists.txt
src/Mod/CADAgent/: AgentRuntime.py  Bridge.py  CADAgent.py  CMakeLists.txt  ChatPanel.py  Init.py  InitGui.py  WebChatPanel.py  cli.py  context.py  dlgPreferencesCADAgent.ui  errors.py  gui_thread.py  permissions.py  profiles.py  project_memory.py  prompts.py  tools.py  tools_diagnostics.py  tools_macros.py  tools_partdesign.py
src/Mod/CADAgent/Resources/: CADAgent.qrc
src/Mod/CADAgent/Resources/web/: README.md  index.html  package.json  vite.config.ts
src/Mod/CADAgent/Resources/web/src/: App.tsx  bridge.ts  styles.css
src/Mod/CADAgent/agent/: __init__.py  __main__.py  bridge.py  checkpoints.py  compaction.py  context.py  envelope.py  errors.py  gui_thread.py  hooks.py  memory.py  modes.py  orchestrator.py  permissions.py  prompts.py  prompts_cli.py  registry.py  rewind.py  runtime.py  sessions.py  subagents.py  ui_bridge.py  verbs.py  verify_gate.py
src/Mod/CADAgent/agent/cli/: __init__.py  doc_handle.py  dock_runtime.py  dock_tools.py  mcp_tools.py  runtime.py  subagents.py  verb_tools.py  verify_gate.py  worker_client.py  worker_singleton.py
src/Mod/CADAgent/agent/host/: __init__.py  doc_state.py  multimodal.py  panel_proxy.py
src/Mod/CADAgent/agent/prompts/: __init__.py  assembler.py  bash_contract.md  bash_contract_subsections.md  core.md  error_recipes.md  etiquette.md  inspect_contract.md  invariants.md  modes_legacy.md  when_to_stop.md  worked_example.md  workflow.md
src/Mod/CADAgent/agent/prompts/conventions/: landmines.md  slots.md  validity.md
src/Mod/CADAgent/agent/prompts/gates/: hard_limits.md
src/Mod/CADAgent/agent/prompts/geometry/: cookbook_index.md  cruciform.md  obround_slot.md  spherical_dome.md  two_view_stackup.md
src/Mod/CADAgent/agent/providers/: __init__.py  _helpers.py  _v1_adapter.py  assembly.py  bulk.py  draft.py  io_extras.py  mesh.py  meta.py  partdesign_native.py  partdesign_shell.py  sheet_metal.py  sketch_native.py  techdraw.py  v1_passthrough.py
src/Mod/CADAgent/agent/runtime/: __init__.py  agent_loop.py  auto_probe.py  context_builder.py  dock_runtime.py  options.py  stop_gate.py
src/Mod/CADAgent/agent/tools/: __init__.py  _common.py  _registry.py  _shared.py  categories.py  diagnostics.py  doc.py  doc_lifecycle.py  geometry.py  inspect.py  memory.py  plan.py  planning.py  profiles.py  selection.py
src/Mod/CADAgent/agent/tools/macros/: __init__.py  _macro_shared.py  holes.py  plate.py
src/Mod/CADAgent/agent/tools/partdesign/: __init__.py  _pd_shared.py  body.py  dress_ups.py  pad_pocket.py  sketch.py
src/Mod/CADAgent/agent/ui/: __init__.py  composer.py  history_popup.py  panel.py  qml_panel.py  styles.py  web_panel.py  widgets.py
src/Mod/CADAgent/agent/ui/qml/: ChatComposer.qml  ChatPanel.qml  ChatTopBar.qml  HistoryPopup.qml  ModesPopup.qml  PlanBanner.qml  TodosPanel.qml  TranscriptView.qml  WorkspaceChip.qml
src/Mod/CADAgent/agent/ui/qml/transcript/: AskRow.qml  AssistantRow.qml  CompactionRow.qml  DecisionRow.qml  EditApprovalRow.qml  ErrorRow.qml  FooterRow.qml  HooksStatusRow.qml  MessageEditOverlay.qml  MilestoneRow.qml  PermissionRow.qml  PlanFileRow.qml  RewindButton.qml  SubagentRow.qml  SystemRow.qml  ThinkingRow.qml  TodosRow.qml  ToolRow.qml  UserRow.qml  VerificationRow.qml
src/Mod/CADAgent/agent/worker/: __init__.py  client.py  protocol.py  registry.py  server.py
src/Mod/CADAgent/agent/worker/handlers/: __init__.py  doc.py  document.py  inspect.py
src/Mod/CADAgent/tests/: README.md  conftest.py  test_checkpoints.py  test_compaction_fork_seed.py  test_compaction_thresholds.py  test_compaction_token_accumulator.py  test_harness_smoke.py  test_history_model.py  test_hooks.py  test_inspect_handlers.py  test_qml_panel_rewind.py  test_rewind.py  test_rewind_seed_summary.py  test_runtime_auto_compact.py  test_sessions_compaction_helpers.py  test_sessions_schema_v3_migration.py  test_sessions_v2.py  test_verify_gate_harness.py  test_workspace_chip.py
src/Mod/CADAgent/tests/fakes/: freecad.py  sdk_client.py
src/Mod/Start/Gui/: FileCardDelegate.cpp
tests/cadagent/: _driver.py  check_transport.py  conftest.py  replay.py  test_add_corner_holes.py  test_context_filtering.py  test_hooks.py  test_memory_schema.py  test_no_body_graceful.py  test_orchestrator.py  test_planner_executor.py  test_reviewer_subagent.py  test_sketcher_subagent.py  test_smoke_make_box.py  test_verb_tools.py  test_worker_client.py  test_worker_document_handlers.py  test_worker_handlers_doc.py  test_worker_protocol.py
tests/cadagent/fixtures/: empty.FCStd  make_fixtures.py  one_body_one_sketch.FCStd  pad_on_rect.FCStd
